# AI-Study-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: __init__.py  gemini_client.py  main.py
